--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <body>
     <section>
         <h1>Awesome Books</h1>
-        <div id="booksList">
-            <!-- JS Data -->
+        <div class="book-list">
+            <!-- See JS File -->
         </div>
-        <div>
-            <form action="" id="form">
-                <input type="text" id="title" name="title" placeholder="Title" required>
-                <br><br>
-                <input type="text" id="author" name="author" placeholder="Author" required>
-                <br><br>
-                <button type="submit" name="submit">Add</button>
-            </form>
-        </div>
+
+        <form action="" method="">
+            <div>
+                <input type="text" name="titleInput" id="titleInput" class="form-control" placeholder="Title"/>
+            </div>
+            <br/>
+            <div> 
+                <input type="text" name="authorInput" id="authorInput" class="form-control" placeholder="Author"/>
+            </div>
+            <br/>
+            <button class="add-btn">Add</button>
+        </form>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
