fix errors in html file

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <!-- See JS File -->
         </div>
 
-        <form action="" method="">
+        <form action="" method="" id="form">
             <div>
-                <input type="text" name="titleInput" id="titleInput" class="form-control" placeholder="Title"/>
+                <input type="text" name="titleInput" id="input_title" class="form-control" placeholder="Title"/>
             </div>
             <br/>
             <div> 
-                <input type="text" name="authorInput" id="authorInput" class="form-control" placeholder="Author"/>
+                <input type="text" name="authorInput" id="input_author" class="form-control" placeholder="Author"/>
             </div>
             <br/>
-            <button class="add-btn">Add</button>
+            <button id="add_btn">Add</button>
         </form>
     </section>
 
