--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <section>
-        <h1>Awesome Books</h1>
+        <h1 id="all">All awesome books</h1>
         <div class="book-list">
             <!-- See JS File -->
         </div>
 
+        <h1 id="new">Add a new book</h1>
         <form action="" method="" id="form">
             <div>
                 <input type="text" name="titleInput" id="input_title" class="form-control" placeholder="Title"/>
