Create class methods to add and remove books

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         </form>
     </section>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
