navbar and contact section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- navbar -->
+    <nav id="navbar" class="navbar">
+
+        <div class="web-name">
+            <p>Awesome Books</p>
+        </div>
+        
+        <div class="web-menu">
+
+            <ul class="menu-list">
+                <li class="menu-list-items"><a href="#" id="books-list-view">List</a></li>
+                <li class="menu-list-items"><a href="#" id="add-book-view">Add New</a></li>
+                <li class="menu-list-items"><a href="#" id="contact-us-view">Contact</a></li>
+            </ul>
+
+        </div>
+
+    </nav>
+    <!-- navbar closed -->
     <section>
         <h1 id="all">All awesome books</h1>
         <div class="book-list">
@@ -27,6 +46,23 @@
             <button id="add_btn">Add</button>
         </form>
     </section>
+    <!-- contact us section -->
+    <section id="contact-us">
+        <div>
+            <h2>Contact Information</h2>
+        </div>
+        <div class="contact-info">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum cumque consequatur aut iusto reprehenderit provident assumenda, sed dolores quaerat temporibus velit quas voluptatibus iste veniam nobis saepe nam pariatur nisi!
+            </p>
+            <ul class="contact-details">
+                <li>Our email is abc123@gmail.com</li>
+                <li>Our phone number is 004358634422</li>
+                <li>Our address is Helphome, Help city, Help</li>
+            </ul>
+        </div>
+    </section>
+    <!-- contact us section closed -->
 
     <script src="script.js" type="module"></script>
 </body>
