add DOM event for contact us page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </nav>
     <!-- navbar closed -->
-    <section>
+    <section id="books-list">
         <h1 id="all">All awesome books</h1>
         <div class="book-list">
             <!-- See JS File -->
