--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Books</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- navbar -->
@@ -75,6 +75,6 @@
         <span>...</span>
     </footer>
 
-    <script src="script.js" type="module"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
