luxon imported and displayed date on the webpage

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     </nav>
     <!-- navbar closed -->
+    <div id="date"></div>
+    
     <section id="books-list">
         <div class="container">
             <h1 id="all">All awesome books</h1>
